appId: com.reown.sample.wallet.internal
name: AppKit Web to Kotlin Wallet Sign Request Confirmed
---
- openLink:
    link: https://appkit-lab.reown.com/library/wagmi/
    browser: true
- scroll
- scroll
- tapOn: "Sign Message"
- extendedWaitUntil:
    visible:
      id: "wallet-request-approve"
    timeout: 30000
- tapOn:
    id: "wallet-request-approve"
- back
- assertVisible: "Signing Succeeded"
